# harness-2

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  deny.toml  install.sh
.claude/: ralph-loop.local.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deny.yml  release.yml
.omx/: metrics.json
.omx/logs/: turns-2026-04-21.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
crates/harness-agent/: Cargo.toml
crates/harness-agent-trace/: Cargo.toml
crates/harness-agent-trace/src/: archive.rs  compat.rs  conversation_url.rs  explanation.rs  git_sidecar.rs  keyring.rs  lib.rs  retention.rs
crates/harness-agent/src/: flush.rs  lib.rs  ralph.rs  recovery.rs  title.rs  turn.rs
crates/harness-agi/: Cargo.toml
crates/harness-agi/src/: foundation_halt.rs  hard_map.rs  jump.rs  lib.rs  self_mod.rs  shutdown_probe.rs
crates/harness-auth/: Cargo.toml
crates/harness-auth/src/: challenge.rs  key.rs  lib.rs  pairing.rs
crates/harness-auth/src/oauth/: device_code.rs  loopback.rs  mod.rs  openai.rs  pkce.rs
crates/harness-autonomy/: Cargo.toml
crates/harness-autonomy/src/: lib.rs
crates/harness-bias/: Cargo.toml
crates/harness-bias/src/: cli.rs  cohort.rs  disclosure.rs  fmea.rs  lib.rs  memory_scan.rs  provider_profile.rs  role_bbq.rs  skill_lint.rs
crates/harness-business/: Cargo.toml
crates/harness-business/src/: cla.rs  coc.rs  dashboard.rs  incorporation.rs  lib.rs  partnership.rs  revenue.rs  tax.rs  templates.rs
crates/harness-carbon/: Cargo.toml
crates/harness-carbon/src/: budget.rs  estimator.rs  lib.rs  region.rs  scope3.rs  shift.rs
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: auth_login.rs  config_explain.rs  daemon_rpc.rs  lib.rs  progress.rs  style.rs  table.rs  ws_client.rs
crates/harness-context/: Cargo.toml
crates/harness-context/src/: alert.rs  assembly.rs  disclosure.rs  lib.rs  system_prompt.rs  tool_description.rs  untrusted.rs
crates/harness-control/: Cargo.toml
crates/harness-control/src/: drift.rs  ems.rs  lib.rs  override_window.rs  post_hoc.rs  scheming.rs  vc_export.rs
crates/harness-core/: Cargo.toml
crates/harness-core/src/: id.rs  lib.rs  principles.rs  time.rs
crates/harness-cost/: Cargo.toml
crates/harness-cost/src/: abort_marker.rs  billing.rs  lib.rs  repeat_detector.rs
crates/harness-crisis/: Cargo.toml
crates/harness-crisis/src/: lib.rs
crates/harness-data/: Cargo.toml
crates/harness-data/src/: benchmark.rs  dataframe.rs  lib.rs  lineage.rs  schema.rs  semantic.rs  sql_tier.rs  tools.rs
crates/harness-devops/: Cargo.toml
crates/harness-devops/src/: a2a.rs  alert.rs  attachment.rs  error_budget.rs  incident.rs  lib.rs  oncall.rs  presets.rs  runbook_map.rs  tier.rs  tools.rs
crates/harness-distributed/: Cargo.toml
crates/harness-distributed/src/: capability.rs  crdt.rs  hlc.rs  korea.rs  lib.rs  no_consensus.rs  registry.rs  safety.rs
crates/harness-education/: Cargo.toml
crates/harness-education/src/: coppa.rs  crisis.rs  learner.rs  lib.rs  meta.rs  provenance.rs  socratic.rs  stream.rs
crates/harness-exit/: Cargo.toml
crates/harness-exit/src/: export.rs  final_migration.rs  governance.rs  lib.rs  lifecycle.rs  release.rs
crates/harness-finance/: Cargo.toml
crates/harness-finance/src/: audit.rs  disclosure.rs  integrity.rs  lib.rs  pii.rs  risk.rs  scope.rs  tier.rs
crates/harness-formal/: Cargo.toml
crates/harness-formal/src/: lean.rs  lib.rs  stateright.rs
crates/harness-foundation/: Cargo.toml
crates/harness-foundation/src/: branding.rs  collapse.rs  fallback.rs  gpai_parser.rs  insurance_export.rs  liability.rs  lib.rs  local_first.rs
crates/harness-fs-safe/: Cargo.toml
crates/harness-fs-safe/src/: can_write.rs  corrupted_root.rs  lib.rs  openat2_spec.rs
crates/harness-government/: Cargo.toml
crates/harness-government/src/: aia.rs  autonomy.rs  disclosure.rs  due_process.rs  foia.rs  lib.rs  procurement.rs  record.rs
crates/harness-hooks/: Cargo.toml
crates/harness-hooks/src/: lib.rs
crates/harness-i18n/: Cargo.toml
crates/harness-i18n/src/: bidi.rs  catalog.rs  direction.rs  lib.rs  number.rs  plural.rs  tokenizer.rs
crates/harness-legal/: Cargo.toml
crates/harness-legal/src/: audit.rs  citation.rs  lib.rs  matter.rs  privilege.rs  redline.rs  search.rs  upl.rs
crates/harness-lifecycle/: Cargo.toml
crates/harness-lifecycle/src/: data_dir.rs  lib.rs  model_registry.rs  shutdown.rs  soak.rs  update.rs
crates/harness-llm/: Cargo.toml
crates/harness-llm-anthropic/: Cargo.toml
crates/harness-llm-anthropic/src/: lib.rs  request.rs  sse.rs
crates/harness-llm-errors/: Cargo.toml
crates/harness-llm-google/: Cargo.toml
crates/harness-llm-ollama/: Cargo.toml
crates/harness-llm-open/: Cargo.toml
crates/harness-llm-openai/: Cargo.toml
crates/harness-llm-types/: Cargo.toml
crates/harness-managed/: Cargo.toml
crates/harness-marketplace/: Cargo.toml
crates/harness-mcp/: Cargo.toml
crates/harness-medical/: Cargo.toml
crates/harness-memory/: Cargo.toml
crates/harness-multimodal/: Cargo.toml
crates/harness-proto/: Cargo.toml
crates/harness-proto-adapters/: Cargo.toml
crates/harness-remote-runtime/: Cargo.toml
crates/harness-rights/: Cargo.toml
crates/harness-robotics/: Cargo.toml
crates/harness-rpc/: Cargo.toml
crates/harness-runtime-lima/: Cargo.toml
crates/harness-sandbox/: Cargo.toml
crates/harness-scope/: Cargo.toml
crates/harness-self-analysis/: Cargo.toml
crates/harness-session/: Cargo.toml
crates/harness-settings/: Cargo.toml
docs/: layer-0-daemon-lifecycle.md  layer-1-transport.md  layer-10-cli.md  layer-2-protocol.md  layer-3-session.md  layer-4-storage.md  layer-5-llm.md  layer-6-tools.md  layer-7-context.md  layer-8-tui.md  layer-9-skills.md  principles.md
scripts/: build-reproducible.sh  release-sign.sh  verify-docs-sync.sh  verify-implements.sh  verify-supersede.sh
(+252 files in other folders)
