[workspace]
resolver = "3"
members = [
    "crates/harness-core",
    "crates/harness-storage",
    "crates/harness-proto",
    "crates/harness-llm-types",
    "crates/harness-lifecycle",
    "crates/harness-rpc",
    "crates/harness-transport",
    "crates/harness-llm",
    "crates/harness-llm-anthropic",
    "crates/harness-llm-openai",
    "crates/harness-llm-google",
    "crates/harness-llm-open",
    "crates/harness-tools",
    "crates/harness-tools-code",
    "crates/harness-tools-fs",
    "crates/harness-tools-shell",
    "crates/harness-tools-agent",
    "crates/harness-tools-browser",
    "crates/harness-tools-computer",
    "crates/harness-tools-lsp",
    "crates/harness-mcp",
    "crates/harness-proto-adapters",
    "crates/harness-agent-trace",
    "crates/harness-scope",
    "crates/harness-sandbox",
    "crates/harness-runtime-lima",
    "crates/harness-verify",
    "crates/harness-llm-errors",
    "crates/harness-cost",
    "crates/harness-i18n",
    "crates/harness-hooks",
    "crates/harness-settings",
    "crates/harness-crisis",
    "crates/harness-typestate",
    "crates/harness-taint",
    "crates/harness-autonomy",
    "crates/harness-supply",
    "crates/harness-multimodal",
    "crates/harness-voice",
    "crates/harness-xr",
    "crates/harness-legal",
    "crates/harness-medical",
    "crates/harness-finance",
    "crates/harness-education",
    "crates/harness-government",
    "crates/harness-robotics",
    "crates/harness-vulnerable",
    "crates/harness-devops",
    "crates/harness-data",
    "crates/harness-surface",
    "crates/harness-bias",
    "crates/harness-control",
    "crates/harness-agi",
    "crates/harness-carbon",
    "crates/harness-distributed",
    "crates/harness-managed",
    "crates/harness-validation",
    "crates/harness-rights",
    "crates/harness-team",
    "crates/harness-business",
    "crates/harness-exit",
    "crates/harness-foundation",
    "crates/harness-fs-safe",
    "crates/harness-stewardship",
    "crates/harness-formal",
    "crates/harness-session",
    "crates/harness-agent",
    "crates/harness-worktree",
    "crates/harness-memory",
    "crates/harness-context",
    "crates/harness-tui",
    "crates/harness-auth",
    "crates/harness-tools-web",
    "crates/harness-cli",
    "crates/harnessd",
    "crates/harness-skills",
    "crates/harness-tools-skills",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/jbj338033/harness"
authors = ["jbj338033"]
publish = false

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
blake3 = "1"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
toml = "0.9"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
anyhow = "1"

# CLI parsing / styling / progress
clap = { version = "4", features = ["derive"] }
anstyle = "1"
indicatif = "0.18"
qrcode = { version = "0.14", default-features = false }

# CLI prompts / browser launch (used by `harness auth login`)
dialoguer = "0.12"
open = "5"

# Testing
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
