[package]
name = "harness-agent-trace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Signed Agent Trace files: export, import (untrusted-wrapped), and key lifecycle"

[dependencies]
harness-auth = { path = "../harness-auth" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
