[package]
name = "harness-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Agent loop: prompt assembly, streaming, flush, crash recovery"

[dependencies]
harness-core = { path = "../harness-core" }
harness-storage = { path = "../harness-storage" }
harness-session = { path = "../harness-session" }
harness-llm = { path = "../harness-llm" }
harness-llm-types = { path = "../harness-llm-types" }
harness-tools = { path = "../harness-tools" }

tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
rusqlite = { version = "0.38", features = ["bundled"] }

[dev-dependencies]
harness-storage = { path = "../harness-storage" }
tempfile = "3"
async-trait = "0.1"
rusqlite = { version = "0.38", features = ["bundled"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
