[package]
name = "harness-agi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "AGI safety — capability jump detector, self-mod gate, foundation halt, capability-level hard map, shutdown-resistance probe"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
