[package]
name = "harness-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "ed25519-based device pairing and challenge-response authentication"

[dependencies]
harness-core = { path = "../harness-core" }
harness-storage = { path = "../harness-storage" }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.38", features = ["bundled"] }

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zeroize = "1"
uuid = { workspace = true }
sha2 = "0.11"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
