[package]
name = "harness-business"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Quarterly transparency dashboard, ASC 606 / IFRS 15 revenue recognition, contract templates, multi-jurisdiction tax, incorporation triple-gate, DCO + Harmony CLA, partnership milestones, CoC enforcement"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
