[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "harness CLI subcommand dispatcher (setup, auth, model, mcp, skill, doctor, config, device, pair)"

[lib]
name = "harness_cli"
path = "src/lib.rs"

[dependencies]
harness-core = { path = "../harness-core" }
harness-storage = { path = "../harness-storage" }
harness-lifecycle = { path = "../harness-lifecycle" }
harness-auth = { path = "../harness-auth" }
harness-proto = { path = "../harness-proto" }
harness-proto-adapters = { path = "../harness-proto-adapters" }
harness-skills = { path = "../harness-skills" }
harness-transport = { path = "../harness-transport" }

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
dialoguer = { workspace = true }
open = { workspace = true }
clap = { workspace = true }
anstyle = { workspace = true }
indicatif = { workspace = true }
qrcode = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
