[package]
name = "harness-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Prompt assembly with KV-cache breakpoints for harness"

[dependencies]
harness-core = { path = "../harness-core" }
harness-llm-types = { path = "../harness-llm-types" }
harness-memory = { path = "../harness-memory" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
