[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Core shared types and principles for harness"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
