[package]
name = "harness-cost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "3-tier cost cap with safety margin, drift-tolerant ledger, and soft warn / hard stop policy"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
