[package]
name = "harness-crisis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Crisis intervention — phrase detector, hotline directory, guardian escalation, three-axis consent"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
