[package]
name = "harness-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Data engineering — sql/dataframe/notebook/pipeline tool registry, db sandbox tier, schema projection, dataframe runtime, text-to-sql mcp pointer, benchmark honesty, lineage stretch"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
