[package]
name = "harness-devops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "DevOps / SRE — IncidentAlert schema, Incident entity, ToolTier, error budget, on-call recall, runbook→skill map"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
