[package]
name = "harness-finance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Finance mode (axis off-default) — analyst scope, financial tier, citation+numeric integrity, PII gate, VaR memory, multi-format audit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
