[package]
name = "harness-fs-safe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "FS hardening — canonical write gate, openat2 RESOLVE_BENEATH spec, 5-signal corrupted-root detector"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
