[package]
name = "harness-i18n"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Translation key catalog for harness — en/ko/ja initially, zh/es/fr/de follow"

[dependencies]
serde = { workspace = true }
unicode-normalization = "0.1"
