[package]
name = "harness-legal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Legal mode (axis off-default) — citation lookup-only typestate, Matter, UPL guardrail, privilege taint, hash-chain audit, redline"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
