[package]
name = "harness-lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Daemon lifecycle: shutdown, model registry, update checks"

[dependencies]
harness-core = { path = "../harness-core" }
harness-storage = { path = "../harness-storage" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
